# internal/http/docs/swagger.json
@@ -224,6 +224,56 @@
                 }
             }
         },
+        "/api/v1/snippet/user/{userId}": {
+            "get": {
+                "description": "Retrieves all snippets for the authenticated user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Snippet"
+                ],
+                "summary": "Get user snippets",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Snippet ID",
+                        "name": "userId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.SnippetResponseModel"
+                            }
+                        }
+                    },
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/snippet/{id}": {
             "get": {
                 "description": "Retrieves a snippet for the authenticated user by ID",
@@ -341,53 +391,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.SnippetResponseModel"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/models.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/models.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/v1/snippet/{userId}": {
-            "get": {
-                "description": "Retrieves all snippets for the authenticated user",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Snippet"
-                ],
-                "summary": "Get user snippets",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Snippet ID",
-                        "name": "userId",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.SnippetResponseModel"
-                            }
                         }
                     },
                     "400": {
